--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 }
 
 html, body {
-  font-family: 'Fredoka', system-ui, sans-serif;
+  font-family: 'Barlow Semi Condensed', system-ui, sans-serif;
   @apply antialiased bg-background text-foreground;
 }
 
